--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>modelviewer</title>
 </head>
 <body>
-    slkdvnklsn
-    <model-viewer camera-controls touch-action="pan-y" skybox-image="./skyboxImage.jpeg" alt="A 3D model of metal spheres at varying degrees of roughness" src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"></model-viewer>
+    <model-viewer alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum" src="https://modelviewer.dev/shared-assets/models/Astronaut.glb" ar shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
 </body>
 </html>
