--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>modelviewer</title>
 </head>
 <body>
-    <model-viewer alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum" src="https://modelviewer.dev/shared-assets/models/Astronaut.glb" ar shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+    <model-viewer alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum" skybox-image="skyboxImage.jpeg" src="https://modelviewer.dev/shared-assets/models/Astronaut.glb" ar shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
 </body>
 </html>
