--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>modelviewer</title>
 </head>
 <body>
-    <model-viewer alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum" skybox-image="skyboxImage2.jpg" src="https://modelviewer.dev/shared-assets/models/Astronaut.glb" ar shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
+  <model-viewer alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum" src="https://modelviewer.dev/shared-assets/models/Astronaut.glb" ar shadow-intensity="1" camera-controls touch-action="pan-y">
+    <hotspot
+      position="0 0 0"
+      text="Tooltip text"
+      billboard="true"
+    >
+      <img src="https://img.freepik.com/free-psd/blank-wall-psd-japandi-living-room-interior_53876-109284.jpg?w=2000" alt="2D Image">
+    </hotspot>
+  </model-viewer>
 </body>
 </html>
