--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
     <title>modelviewer</title>
 </head>
 <body>
-  <model-viewer alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum" src="https://modelviewer.dev/shared-assets/models/Astronaut.glb" ar shadow-intensity="1" camera-controls touch-action="pan-y">
-    <!-- Create a large hotspot to cover the model -->
-    <hotspot
-      position="0 0 0"
-      scale="100 100 100"
-      billboard="true"
-    >
-      <img src="https://img.freepik.com/free-psd/blank-wall-psd-japandi-living-room-interior_53876-109284.jpg?w=2000" alt="2D Image">
-    </hotspot>
-  </model-viewer>
+    <!-- static 2d image background -->
+    <div class="demo" style="background: no-repeat url('./skyboxImage.jpeg'); overflow-x: hidden;">
+        <span style="position: absolute; text-align: center; font-size: 100px; line-height: 100px; left: 50%; transform: translateX(-50%);">Background<br>is visible<br>through<br>transparent<br>objects.</span>
+        <model-viewer camera-controls touch-action="pan-y" src="https://modelviewer.dev/shared-assets/models/glTF-Sample-Models/2.0/ToyCar/glTF-Binary/ToyCar.glb" ar alt="A 3D transparency test" style="background-color: unset;"></model-viewer>
+    </div>
+    <!-- normal panaroma -->
+    <model-viewer
+        alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum"
+        skybox-image="skyboxImage2.jpg" src="https://modelviewer.dev/shared-assets/models/Astronaut.glb" ar
+        shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+    <!-- panaroma 360 and virtual tours -->
+    <model-viewer
+        alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum"
+        skybox-image="skyboxImage3.jpg" src="https://modelviewer.dev/shared-assets/models/Astronaut.glb" ar
+        shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
 </body>
 </html>
