--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <!-- static 2d image background -->
-    <div class="demo" style="background: no-repeat url('./skyboxImage.jpeg'); overflow-x: hidden;">
-        <span style="position: absolute; text-align: center; font-size: 100px; line-height: 100px; left: 50%; transform: translateX(-50%);">Background<br>is visible<br>through<br>transparent<br>objects.</span>
-        <model-viewer camera-controls touch-action="pan-y" src="https://modelviewer.dev/shared-assets/models/glTF-Sample-Models/2.0/ToyCar/glTF-Binary/ToyCar.glb" ar alt="A 3D transparency test" style="background-color: unset;"></model-viewer>
-    </div>
+    <!-- <div class="demo" style="background: no-repeat url('./skyboxImage.jpeg'); overflow-x: hidden;">
+        <span
+            style="position: absolute; text-align: center; font-size: 100px; line-height: 100px; left: 50%; transform: translateX(-50%);">Background<br>is
+            visible<br>through<br>transparent<br>objects.</span> -->
+        <model-viewer camera-controls touch-action="pan-y"
+            src="https://modelviewer.dev/shared-assets/models/glTF-Sample-Models/2.0/ToyCar/glTF-Binary/ToyCar.glb" ar
+            alt="A 3D transparency test" style="background: no-repeat url('./skyboxImage.jpeg')"></model-viewer>
+    <!-- </div> -->
     <!-- normal panaroma -->
     <model-viewer
         alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum"
