--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>modelviewer</title>
 </head>
 <body>
-    <model-viewer src="https://modelviewer.dev/assets/ShopifyModels/Chair.glb" poster="https://modelviewer.dev/assets/ShopifyModels/Chair.webp" shadow-intensity="1" ar camera-controls touch-action="pan-y" alt="A 3D model carousel">
+    <!-- https://developer.apple.com/documentation/arkit/arkit_in_ios/adding_an_apple_pay_button_or_a_custom_action_in_ar_quick_look -->
+    <model-viewer src="https://modelviewer.dev/assets/ShopifyModels/Chair.glb" ios-src="https://modelviewer.dev/shared-assets/models/Astronaut.usdz#custom=https://rameshmmmm.github.io/modelViewerSample/customBanner.html&customHeight=large" poster="https://modelviewer.dev/assets/ShopifyModels/Chair.webp" shadow-intensity="1" ar camera-controls touch-action="pan-y" alt="A 3D model carousel">
   
         <button slot="ar-button" id="ar-button">
           View in your space
